--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해에 꼭 이루자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">이모티콘 만들기</div>
+        <div class="bucket img1-t2 center done">나만의 웹서비스 만들기</div>
         <div class="bucket img2 center">집 이사하기</div>
         <div class="bucket img2 center">주3회 운동하기</div>
         <div class="bucket img1-t4 center">건강한 음식 먹기</div>
-        <div class="bucket img1 center">바디프로필 찍기</div>
+        <div class="bucket img1 center">이모티콘 만들기</div>
         <div class="bucket img2-t5 center">3달에 한번씩 여행하기</div>
     </div>
 
